--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
-  carousel_slider: ^2.2.1
-  animate_do: ^1.7.3
+  line_icons: ^2.0.0
 
 dev_dependencies:
   flutter_test:
